fruits-chart/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fruits
  labels:
    app: fruits
    app.kubernetes.io/component: fruits
    app.kubernetes.io/instance: fruits
    app.kubernetes.io/name: fruits
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  sessionAffinity: None
  selector:
    deployment: fruits
