fruits-chart/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fruits
  labels:
    app: fruits
    app.kubernetes.io/component: fruits
    app.kubernetes.io/instance: fruits
    app.kubernetes.io/name: fruits
spec:
  to:
    kind: Service
    name: fruits
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
